@@ -187,6 +187,25 @@ key=value.  The possible keys are:</p>
     type depending on what the WebAuth server asked for.</p>
 </dd>
 
+<dt>pt</dt>
+<dd><p>For tokens of type <code>proxy</code>, this will contain the proxy
+    token type.  Currently, the only supported proxy token type is
+    <code>krb5</code>, which can be used by the WebAuth Application Server
+    to request Kerberos v5 credentials on behalf of the user from the
+    WebKDC.</p>
+</dd>
+
+<dt>sa</dt>
+<dd><p>The requested subject authenticator type for a
+    <code>requestToken</code> operation.  If the WebAuth Application Server
+    requests an id token, this will indicate the type of id token it is
+    requesting.  Possible values are <code>webkdc</code>, which provides
+    the user's identity but no additional information, or
+    <code>krb5</code>, which provides a Kerberos authenticator for the user
+    that can be verified by the WebAuth Application Server's Kerberos
+    key.</p>
+</dd>
+
 <dt>server</dt>
 <dd><p>For <code>getTokens</code> and <code>requestToken</code>, this will
     contain the identifier of the requesting server (in the case of
